<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity"
    android:background="#cfc8c8">

    <include
        android:id="@+id/title"
        layout="@layout/title_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <include
        android:id="@+id/hero"
        android:layout_margin="16dp"
        layout="@layout/hero_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/garis_batas"
        />
    
    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="16dp"
        android:textAlignment="textStart"
        >
        <TextView
            android:id="@+id/daerah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_daerah"
            android:textSize="12sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/prodi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_prodi"
            android:textSize="12sp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/prefix_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Link github: "
                android:textStyle="bold"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/self_link"
                android:autoLink="web"
                android:linksClickable="true"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="12sp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/hobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/self_hobi"
            />
        <TextView
            android:id="@+id/some"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="ChatGPT said about me:"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_yaps"
            android:textStyle="bold"
            android:textSize="11sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quote_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="#fdefef"
        android:elevation="4dp"
        android:translationZ="4dp"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/self_quote"
            android:textStyle="italic"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="#333333" />
        <TextView
            android:id="@+id/quote_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quote_person"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#555555"
            android:gravity="end"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <include
        android:id="@+id/footer"
        layout="@layout/footer_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
